# cpp_binding_example

./: .gitignore  CMakeLists.txt  README.md
cpp_binding_example_lib/: CMakeLists.txt
cpp_binding_example_lib/src/: cpp_binding_example.cpp
cpp_binding_example_lib/test/: CMakeLists.txt  cpp_binding_example_test.cpp
cpp_binding_example_main/: CMakeLists.txt
cpp_binding_example_main/src/: cpp_binding_example_main.cpp
cpp_lib/: CMakeLists.txt
cpp_lib/include/: cpp_lib.hpp
cpp_lib/src/: cpp_lib.cpp
cpp_main/: CMakeLists.txt
pybind_binding/: CMakeLists.txt
pybind_binding/src/: core_pybind.cpp
pybind_binding/src/cpp_binding_example_pybind/: __init__.py
